[project]
name = "dtp-test-script"
version = ""
description = ""
authors = [{ name = "Campbell He", email = "campbell.he@icloud.com" }]
dependencies = ["numpy>=1.22.3", "matplotlib>=3.5.1", "pandas>=1.4.2"]
requires-python = ">=3.8"
license = { text = "MIT" }
[project.optional-dependencies]

[tool.pdm]
[tool.pdm.scripts]
gen_trace = "python gen_trace.py"
fmt = "black ."

[tool.pdm.dev-dependencies]
lint = ["black>=22.3.0"]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
