[project]
name = "dtp-test-script"
version = ""
description = ""
authors = [
    { name = "Campbell He", email = "campbell.he@icloud.com" },
    {name = "simonkorl", email = "mc21@mails.tsinghua.edu.cn"},
]
dependencies = ["matplotlib==3.5.2", "numpy==1.22.3", "polars==0.13.55", "utils==1.0.1"]
requires-python = ">=3.10"
license = {text = "MIT"}


[tool.pdm]
[tool.pdm.scripts]
gen_trace = "python gen_trace.py"
fmt = "black ."

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
